prevent background being visible when drop items on mobile appear e.g. search

--- a/jero-frontend/components/Navbar/NavbarMobile/Dropdowns/Container.module.css
+++ b/jero-frontend/components/Navbar/NavbarMobile/Dropdowns/Container.module.css
@@ -1,8 +1,11 @@
+
 #container{
     width: 100vw;
-    height: 100vh;
+    height: 110vh;
     z-index: 50000000;
     margin: 0;
     background-color: black;
-    position: fixed;
+    position: absolute;
+    overflow-y: hidden;
+    
 }
